# hashcat

./: .gitignore  BUILD_Docker.md  BUILD_MSYS2.md  BUILD_WSL.md  README.md
OpenCL/: inc_cipher_blowfish.h  inc_hash_streebog512.cl  inc_rp.cl  inc_rp.h  inc_rp_common.h  inc_rp_optimized.cl  inc_rp_optimized.h  m00410-pure.cl  m01500_a0-pure.cl  m01500_a1-pure.cl  m01810-pure.cl  m03000_a0-pure.cl  m03000_a1-pure.cl  m08500_a0-pure.cl  m08500_a1-pure.cl  m08500_a3-pure.cl  m12700-pure.cl  m13150-pure.cl  m13150_a0-pure.cl  m14000_a0-pure.cl  m14000_a1-pure.cl  m14100_a0-pure.cl  m14100_a1-pure.cl  m14100_a3-pure.cl  m16000_a0-pure.cl  m16000_a1-pure.cl  m16000_a3-pure.cl  m17040-pure.cl  m17050-pure.cl  m17220_a3-pure.cl  m18250-pure.cl  m18250_a0-pure.cl  m22800_a0-pure.cl  m22800_a1-pure.cl  m22800_a3-pure.cl  m32300_a0-optimized.cl  m32300_a1-optimized.cl  m32300_a3-optimized.cl  m34300-pure.cl  m34301-pure.cl  (+8 more)
Python/: example.ctx  generic_hash_mp.py  generic_hash_sp.py  hcshared.py
Rust/bridges/dynamic_hash/: Cargo.toml
Rust/bridges/dynamic_hash/src/: dynamic_hash.rs  eval.rs  interop.rs  lib.rs  parse.rs  tests.rs
docker/: BinaryPackage.arch  BinaryPackage.ubuntu18  BinaryPackage.ubuntu20  hashcatToolchain.ubuntu
docs/: changes.txt  credits.txt  hashcat-example-hashes.md  hashcat-generic-attack-mode-development-guide.md  hashcat-generic-attack-mode.md  hashcat-help.md  hashcat-rust-plugin-quickstart.md  hashcat-rust-plugin-requirements.md  limits.txt  package-status.md  packages.md  rules.txt
include/: autotune.h  backend.h  brain.h  common.h  dispatch.h  (+12 more)
(+306 files in other folders)
